Add script tag to ads.html for external resource

--- a/ads.html
+++ b/ads.html
@@ -10,7 +10,7 @@
         #timer { font-size: 60px; font-weight: bold; color: #38bdf8; margin: 20px 0; }
     </style>
 </head>
-<body>
+<body><script src="https://pl28732282.effectivegatecpm.com/6d/5a/e2/6d5ae25a8b0c2974cabf7d073c7cc9f8.js"></script>
     <div class="container">
         <div style="font-size: 20px;">Aapka link taiyar ho raha hai...</div>
         <div id="timer">30</div>
